--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,21 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
-
-# cypress
-cypress/screenshots
-cypress/videos
-_static
-
-# next.js
-/.next
-/out
-
-.env
-
-# next-sitemap
-public/robots.txt
-public/sitemap.xml
-public/sitemap-*.xml
-
-# cache
-.swc/
 
 # production
 /build
 
 # misc
 .DS_Store
-*.pem
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# dotenv local files
-.env*.local
-
-# local folder
-local
-
-# vercel
-.vercel
-.next
-/.env.local
